--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -2509,107 +2509,107 @@ stories:
   domain: http://www.grandhaventribune.com/
   link: http://www.grandhaventribune.com/Softball/2019/07/01/Sand-sweat-and-soccer.html
 images:
-- name: legal-statue-legalstatue-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-electricity.jpg
-- name: nazi-invasion-IMG_7559.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7559.jpg
-- name: oldtrain-oldtrain-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-dark-soul.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-circuit-5.jpg
-- name: old-cabin-oldcabin-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-gred-mash.jpg
-- name: mosaic-face-mosaic-face-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dry-skin.jpg
-- name: san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purp-paper.jpg
-- name: old-barn-old-barn-1500-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-post-modern.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
-- name: windowmountain-window-mountain-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-colored-circuits.jpg
-- name: birdhouse-birdhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-brush.jpg
-- name: supreme-court-supremecourt-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-green-zuma.jpg
-- name: school-clouds-church-clouds-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-granite.jpg
-- name: amusement-park-amusement-park-2-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-jap-dys-1.jpg
-- name: bordercrossing-bordercrossing-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-blue-granite.jpg
-- name: death-valley-death-valley-national-park-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-bright-sand.jpg
-- name: oldhouse-granaryfield-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-smooth-ride.jpg
-- name: aws-s3-dunes-dunes-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still-1200.jpg
-- name: old-granary-field-granaryfield-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-smooth-ride.jpg
-- name: old-door-lock-old-door-lock-2-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crabapple.jpg
-- name: school-clouds-church-clouds-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-spagetti-accident.jpg
-- name: crow-crow-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-umberto-bocc.jpg
-- name: old-granary-field-oldhouse-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-emily-carr.jpg
-- name: dragon_close-up-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-uncle-sam.jpg
-- name: gears-4882162452-fa3126b38d-b-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-yellow-paper.jpg
-- name: old-granary-field-granaryfield-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-circuit.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purple-pond.jpg
-- name: walled-garden-walled-garden-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colored-circuits.jpg
-- name: gypsy-wagon-gypsywagon-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gan-vogh.jpg
-- name: beach-clouds-lifeguard-beachclouds-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-bright-sand.jpg
-- name: sand-hand-sand-hand-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-space-pizza.jpg
-- name: downtown-trucksilo-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crafty-painting.jpg
-- name: server-cloud-server-racks-clouds-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-sunday.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colorful-blocks.jpg
-- name: status-berlin-status-berlin-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-light-dali.jpg
-- name: death-valley-death-valley-national-park-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kandinsky-bv.jpg
-- name: supreme-court-supremecourt-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-gan-vogh.jpg
-- name: catacombs-catacombs-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-monet-one.jpg
-- name: subway-subway-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-brush.jpg
-- name: miamibeach-miamibeach-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-rainbow-festival.jpg
-- name: aws-s3-stories-lincoln-consitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-lincoln-consitution.jpg
-- name: fence-fence-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sand-paper.jpg
-- name: aws-s3-stories-new-27-93-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--1--1.jpg
-- name: store-on-corner-store-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-diego-rivera1.jpg
-- name: flower-barbed-wire-flower-barbed-wire-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-purp-paper.jpg
-- name: copper-circuit-IMG_7936.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7936.jpg
-- name: birdhouse-birdhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gan-vogh.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-matrix.jpg
-- name: aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-4882162452-fa3126b38d-b-spagetti-accident.jpg
-- name: yosemite-yosemite-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-monet-one.jpg
-- name: statue-of-liberty-front-view-statueofliberty-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-ww2-dresden.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-oily-mcoilface.jpg
+- name: yosemite-yosemite-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-purple-storm.jpg
+- name: old-granary-field-oldhouse-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-blocks.jpg
+- name: server-cloud-server-racks-door-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-matrix.jpg
+- name: blossombar-crafty-painting-file-00-00-50-18.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-18.jpg
+- name: ellis-island-ellis-island-room-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-constitution.jpg
+- name: white-house-whitehouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-sunday.jpg
+- name: art-museum-art-museum-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crunch-paper.jpg
+- name: abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
+- name: ellis-island-ellis-island-room-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-monet-one.jpg
+- name: old-door-lock-old-door-lock-2-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-mucha-mult.jpg
+- name: sand-hand-sand-hand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand.jpg
+- name: hollywood-building-hollywood-building-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-clean-view.jpg
+- name: old-granary-field-oldhouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crabapple.jpg
+- name: gypsymosaic-gypsy-eyes-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-plentiful.jpg
+- name: ellis-island-ellisisland-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-neo-instinct.jpg
+- name: miamibeach-miamibeach-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-nazi-poster.jpg
+- name: aws-s3-square-christianity-under-construction-copper-circuit-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-christianity-under-construction-copper-circuit-square.jpg
+- name: old-cabin-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-really-hot.jpg
+- name: crow_blue_circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_blue_circuit.jpg
+- name: flower-barbed-wire-flower-barbed-wire-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-cinnamon-rolls.jpg
+- name: capital-battle-capitolbattle-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-three.jpg
+- name: trucksilo-trucksilo-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-spagetti-accident.jpg
+- name: subway-subway-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-purple-pond.jpg
+- name: dc-statue-dcstatue-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-purple-storm.jpg
+- name: server-cloud-server-racks-door-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-atari-asteroids.jpg
+- name: aws-s3-stories-facing-cannon-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-facing-cannon-copper-circuit.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crafty-painting.jpg
+- name: mediterranean-mediterranean-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-neo-instinct.jpg
+- name: old-door-lock-old-door-lock-2-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-smoking-cigarette.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-free-woman.jpg
+- name: rockingchair-rockingchair-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-colored-circuits.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-emily-carr.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-emily-carr.png
+- name: locked-up-steam-lock-up-steam-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-constitution.jpg
+- name: stories-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-diego-rivera1.jpg
+- name: oldbarn-oldbarn-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-atari-missle.jpg
+- name: meadowbutterfly-meadow-butterfly-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-light-dali.jpg
+- name: san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colored-circuits.jpg
+- name: oldcabin-oldcabin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-constitution.jpg
+- name: old-granary-field-oldhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colored-circuits.jpg
+- name: old-barn-old-barn-1500-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-sand-paper.jpg
+- name: mediterranean-mediterranean-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-ww2-color.jpg
+- name: stories-35910978054-906047b6cb-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-35910978054-906047b6cb-z.jpg
+- name: castle-wall-DSC-0067-blue-circuit-5.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-5.JPG
+- name: christianity-christianity-under-construction-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-gred-mash.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-oily-mcoilface.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-emily-carr.jpg
+- name: death-valley-death-valley-national-park-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-hot-spicy.jpg
 ---
 Hong Kong Protesters Aim To Take Message To Mainland Chinese.&nbsp;How To Safely Navigate Extreme Cold Weather And Home Ownership.&nbsp;Hudson River Park Cracks Down On Plastic.&nbsp;Greeks Vote In 1st Parliamentary Election Since Bailout End.&nbsp;One Nation Under God.&nbsp;Domestic Violence And Kidnapping.&nbsp;Opening Up To Womens Stories.&nbsp;Rain Postpones NASCAR's Final Holiday Visit To Daytona.&nbsp;
